Infra/k8s/Auth-Mongo-Depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-mongo
  template:
    metadata:
      labels:
        app: auth-mongo
    spec:
      containers:
        - name: auth-mongo
          image: mongo
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: auth-mongo-vol
              mountPath: /data/db

      volumes:
        - name: auth-mongo-vol
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim

---
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-srv
spec:
  selector:
    app: auth-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
