Infra/k8s/Email-Depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: email
  template:
    metadata:
      labels:
        app: email
    spec:
      containers:
        - name: email
          image: rohantiwari706/email

---
apiVersion: v1
kind: Service
metadata:
  name: email-srv
spec:
  selector:
    app: email
  type: ClusterIP
  ports:
    - name: email
      protocol: TCP
      port: 3002
      targetPort: 3002
