Infra/k8s/Frontend-Depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-depl
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: rohantiwari706/frontend

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-srv
spec:
  selector:
    app: frontend
  type: ClusterIP
  ports:
    - name: frontend
      protocol: TCP
      port: 5173
      targetPort: 5173
