Infra/k8s/Item-Depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: items-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: items
  template:
    metadata:
      labels:
        app: items
    spec:
      containers:
        - name: items
          image: rohantiwari706/items:ec0c6e08cbd87ad520c3c27243abbd49dfdb7c873be7926092df25505de9f7ea
---
apiVersion: v1
kind: Service
metadata:
  name: items-srv
spec:
  selector:
    app: items
  type: ClusterIP
  ports:
    - name: items
      protocol: TCP
      port: 3001
      targetPort: 3001
