Infra/k8s/Item-Mongo-Depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: items-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: items-mongo
  template:
    metadata:
      labels:
        app: items-mongo
    spec:
      containers:
        - name: items-mongo
          image: mongo
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: items-mongo-persistent-storage
              mountPath: /data/db
      volumes:
        - name: items-mongo-persistent-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim2
---
apiVersion: v1
kind: Service
metadata:
  name: items-mongo-srv
spec:
  selector:
    app: items-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
